--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -11,9 +11,9 @@
 <div class="logo">
       <img src="logo.png" alt="logo">
       <div class="topnav-right">
-        <a href="#home">Home</a>
-        <a href="#news">View Events</a>
-        <a href="#contact">Contact Us</a> 
+        <a href="../event/eventhomepage (1).php">Home</a>
+        <a href="../event/eventhomepage (1).php">View Events</a>
+        <a href="contact.html">Contact Us</a> 
       </div>
       
 </div>
